--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -15,8 +15,17 @@
 
     <body>
     <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
+    <!-- This is the index page of your Django app! -->
     <!--Add a nav bar here -->
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                  <a class="navbar-brand" href="#">Best Cars Home</a>
+                  <a class="navbar-brand" href="/about.html">About Us</a>
+                  <a class="navbar-brand" href="/contact.html">Contact Us</a>
+            </div>
+        </div>
+    </nav>
 
     <!--Add a dealer table here -->
 
