IBM Capston project, Week 4 progress

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -48,6 +48,32 @@
     </nav>
 
     <!--Add a dealer table here -->
+    <table>
+        <thead>
+            <th>ID</th>
+            <th>Dealer Name</th>
+            <th>Address</th>
+            <th>City</th>
+            <th>State</th>
+            <th>Zip</th>
+        </thead>
+        <tbody>
+            {% for dealer in dealership_list %}
+            <tr>
+                <td>{{ dealer.id }}</td>
+                <td>
+                    <a href="{% url 'djangoapp:dealer_details' dealer.id %}">
+                        {{ dealer.full_name }} 
+                    </a>
+                </td>
+                <td>{{ dealer.address }}</td>
+                <td>{{ dealer.city }}</td>
+                <td>{{ dealer.st }}</td>
+                <td>{{ dealer.zip }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
     </body>
 
