IBM Capstone project Week 4, finished with lab

--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -10,9 +10,50 @@
     <body>
 
     <!--Add a nav bar here -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Best Cars Home</a>
+                    <a class="navbar-brand" href="/about.html">About Us</a>
+                    <a class="navbar-brand" href="/contact.html">Contact Us</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:add_review' %}">Add Review</a>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username" >
+                                <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                <button class="btn btn-primary" type="submit">Login</button>
+                                <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
 
     <!-- Add reviews as cards -->
-
+        <div class="card-columns">
+            <!-- {% for review in reviews %} -->
+            <div class="card">
+                <img src="{{MEDIA_URL}}/emoji/positive.png" class="card-img-left">
+                <div class="card-body">
+                    <h5 class="card-title">{{ review.car_make }} {{ review.car_model }}</h5>
+                    <h5 class="card-title">Year</h5>
+                    <p class="card-text">{{ review.review }}</p>
+                </div>
+            </div>
+            <!-- {% endfor %} -->
+        </div>
     </body>
 
 </html>
