--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -17,64 +17,69 @@
     <!-- Remove this line the first time you edit this file -->
     <!-- This is the index page of your Django app! -->
     <!--Add a nav bar here -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Best Cars Home</a>
-                  <a class="navbar-brand" href="/about.html">About Us</a>
-                  <a class="navbar-brand" href="/contact.html">Contact Us</a>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Best Cars Home</a>
+                    <a class="navbar-brand" href="/about.html">About Us</a>
+                    <a class="navbar-brand" href="/contact.html">Contact Us</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username" >
+                                <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                <button class="btn btn-primary" type="submit">Login</button>
+                                <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+                </ul>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+        </nav>
 
-    <!--Add a dealer table here -->
-    <table>
-        <thead>
-            <th>ID</th>
-            <th>Dealer Name</th>
-            <th>Address</th>
-            <th>City</th>
-            <th>State</th>
-            <th>Zip</th>
-        </thead>
-        <tbody>
-            {% for dealer in dealership_list %}
-            <tr>
-                <td>{{ dealer.id }}</td>
-                <td>
-                    <a href="{% url 'djangoapp:dealer_details' dealer.id %}">
-                        {{ dealer.full_name }} 
-                    </a>
-                </td>
-                <td>{{ dealer.address }}</td>
-                <td>{{ dealer.city }}</td>
-                <td>{{ dealer.st }}</td>
-                <td>{{ dealer.zip }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+        <!--Add a dealer table here -->
+        <table class="table" id="table" data-filter-control="true">
+            <thead>
+                <th data-field="id">ID</th>
+                <th data-field="dealer_name">Dealer Name</th>
+                <th data-field="address">Address</th>
+                <th data-field="city">City</th>
+                <th data-field="st" data-filter-control="select">State</th>
+                <th data-field="zip">Zip</th>
+            </thead>
+            <tbody>
+                {% for dealer in dealership_list %}
+                <tr>
+                    <td>{{ dealer.id }}</td>
+                    <td>
+                        <a href="{% url 'djangoapp:dealer_details' dealer.id %}">
+                            {{ dealer.full_name }} 
+                        </a>
+                    </td>
+                    <td>{{ dealer.address }}</td>
+                    <td>{{ dealer.city }}</td>
+                    <td>{{ dealer.st }}</td>
+                    <td>{{ dealer.zip }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
     </body>
 
+    <script>
+        $(function() {
+          $('#table').bootstrapTable()
+        })
+      </script>
 </html>
