--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -13,14 +13,14 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Best Cars Home</a>
-                    <a class="navbar-brand" href="/about.html">About Us</a>
-                    <a class="navbar-brand" href="/contact.html">Contact Us</a>
+                    <a class="navbar-brand" href="/djangoapp">Best Cars Home</a>
+                    <a class="navbar-brand" href="/djangoapp/about">About Us</a>
+                    <a class="navbar-brand" href="/djangoapp/contact">Contact Us</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
                     <li>
-                        <a class="btn btn-link" href="{% url 'djangoapp:add_review' %}">Add Review</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer.id %}">Add Review</a>
                         <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
                         <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
                     </li>
@@ -42,8 +42,9 @@
         </nav>
 
     <!-- Add reviews as cards -->
+        <h5>Reviews for {{dealer.full_name}} | (Dealer ID {{dealer.id}}) </h5>
         <div class="card-columns">
-            <!-- {% for review in reviews %} -->
+            {% for review in reviews %}
             <div class="card">
                 <img src="{{MEDIA_URL}}/emoji/positive.png" class="card-img-left">
                 <div class="card-body">
@@ -52,8 +53,13 @@
                     <p class="card-text">{{ review.review }}</p>
                 </div>
             </div>
-            <!-- {% endfor %} -->
+            {% endfor %}
         </div>
+        <button class="btn btn-primary" href="##">Add Your Review</button>
+        <!-- 
+            url 'djangoapp:add_review dealer.id
+        -->
+
     </body>
 
 </html>
