--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -20,9 +20,9 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Best Cars Home</a>
-                    <a class="navbar-brand" href="/about.html">About Us</a>
-                    <a class="navbar-brand" href="/contact.html">Contact Us</a>
+                    <a class="navbar-brand" href="/djangoapp">Best Cars Home</a>
+                    <a class="navbar-brand" href="/djangoapp/about">About Us</a>
+                    <a class="navbar-brand" href="/djangoapp/contact">Contact Us</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
